creation room module, shared module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="flex-container">
   <div>
     <span>{{title}}</span>
-    <span [textContent]="title"></span>
+    <!--<span [textContent]="title"></span>-->
     <a href="" mat-button>
       <mat-icon>home</mat-icon>
       Accueil
@@ -23,3 +23,10 @@
   </div>
 
 </mat-toolbar>
+
+
+contenu
+
+<footer>
+  <app-top-five></app-top-five>
+</footer>
