--- a/src/app/modules/room/top-five/top-five.component.html
+++ b/src/app/modules/room/top-five/top-five.component.html
@@ -1,2 +1,12 @@
-<p>top-five works!</p>
-<a mat-button>test</a>
+<h2>TOP 5</h2>
+
+<mat-grid-list cols="5">
+    <mat-grid-tile *ngFor="let room of rooms">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>{{room.name}}</mat-card-title>
+            </mat-card-header>
+            <img matCardImage src="/assets/images/{{room.image}}">
+        </mat-card>
+    </mat-grid-tile>
+</mat-grid-list>
